--- a/.github/workflows/literal.yml
+++ b/.github/workflows/literal.yml
@@ -9,5 +9,5 @@ jobs:
           LITERAL_NULL: ${{ null }}
           LITERAL_BOOLEAN: ${{ true }}
           LITERAL_NUMBER: ${{ 1234 }}
-          LITERAL_STRING: ${{ "Hello" }}
+          LITERAL_STRING: ${{ 'Hello' }}
           LITERAL_OMIT_STRING: World
