opened は draft 関係なく動作してしまうことがわかったので、値を ready_for_review に変更

--- a/.github/workflows/comment_on_open.yml
+++ b/.github/workflows/comment_on_open.yml
@@ -1,7 +1,7 @@
-name: Comment
+name: Trigger ready for review upon Comment
 on: 
   pull_request:
-    types: [opened]
+    types: [ready_for_review]
 jobs:
   comment:
     runs-on: ubuntu-latest
